proto definitions: update ticket request
